DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
[1.0 Beta 1 released - 12.24.2004]=============================================
2004-12-22 patrickh NEW VERSION: 0.91.0
2004-12-22 patrickh Use named semaphores for all releases of Darwin 7.x.
                    NEW VERSION: 0.41.1
2004-12-22 allenb   Added simplified interface to the profiling code through
                    the vpr::prof namespace.
                    NEW VERSION: 0.41.0
2004-12-15 allenb   Added simple, working, tested Barrier implementation.
                    NEW VERSION: 0.40.6
2004-12-02 patrickh Updated to allow the use of version 8.1 of the Intel C++
                    compiler.
                    NEW VERSION: 0.40.5
2004-12-01 allenb   Added support for demangling of callstack data with GCC.
2004-11-18 patrickh Changed vpr::Int8 from char to signed char.
                    NEW VERSION: 0.40.2
2004-10-27 allenb   Added support for multi-threaded profile data collection.
                    Profile data is now collected and managed per thread.
2004-10-27 allenb   Refactored BaseThread handling and usage.
                    This cleans up some crufty corners of this code that
                    still has the flavor of polymorphic threads.
2004-10-27 allenb   Refactored API of ProfileNode and ProfileManager.
                    Removed redundant code, simplified API, and fixed bugs.
                    Added XML output of profile data.
                    Removed framecounter from ProfileManager.
2004-10-14 patrickh Added support for named semaphores in vpr::SemaphorePosix
                    for use on Darwin 7.5 and earlier.
                    NEW VERSION: 0.40.1
2004-10-11 patrickh Refactored vpr::LibraryLoader into a simple collection of
                    helper functions.
                    NEW VERSION: 0.40.0
2004-09-26 patrickh Removed the NSPR dependency on Mac OS X.
                    NEW VERSION: 0.39.1